--- a/ormconfig.json
+++ b/ormconfig.json
@@ -1,10 +1,11 @@
 {
-  "type": "postgres",
-  "host": "localhost",
-  "port": "5432",
-  "username": "postgres",
-  "password": "docker",
-  "database": "gostack_desafio09",
+  "name":"default",
+  "type":"mysql",
+  "host":"localhost",
+  "port":3306,
+  "username":"nexo",
+  "password":"welcomevoce#",
+  "database":"gostack_desafio09",
   "entities": ["./src/modules/**/infra/typeorm/entities/*.ts"],
   "migrations": ["./src/shared/infra/typeorm/migrations/*.ts"],
   "cli": {
